<resources>
    <string name="app_name">Calcular Imc</string>
    <string name="saludo">Hola</string>
    <string name="peso">Peso (Kg)</string>
    <string name="altura">Altura (Mts)</string>
    <string name="pesokg">Peso en Kilogramos</string>
    <string name="alturgamts">Altura en Metros</string>
    <string name="bajo_peso">Bajo Peso</string>
    <string name="peso_saludable">Peso Saludable</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidad">Obesidad</string>
    <string name="tuimc">Tu IMC es: </string>
    <string name="tucate">Tu categoria es: </string>
    <string name="campovacio">Los campos no pueden estar vacíos</string>
    <string name="error">Error al calcular el IMC, Verificar Datos</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="guardarex">Guardado Con Exito</string>
    <string name="errorguardar">Error al guardar</string>
    <string name="historia">Historia</string>
    <string name="peso1">Peso:</string>
    <string name="altura1">Altura:</string>
    <string name="imc">IMC:</string>
    <string name="cate">Categoria:</string>
    <string name="fecha">Fecha:</string>
    <string name="noreg">No hay registros para mostrar</string>
    <string name="acceso">Acceso</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="usernoexist">Usuario No existe</string>
    <string name="credinvalid">Credenciales Inválidas</string>
    <string name="error2">Error al verificar Usuario</string>
    <string name="regexitoso">Usuario Registrado Correctamente</string>
    <string name="userexist">Usuario ya existe</string>
</resources>